Deps/remove phpasn1 (#415)
* fgrosse/phpasn1 removed
* Tests fixed
* Rector+ECS
* Minor fix
* PKCS12 loading skipped

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,10 +5,10 @@ parameters:
     checkMissingIterableValueType: false
     checkGenericClassInNonGenericObjectType: false
     treatPhpDocTypesAsCertain: false
+    checkUninitializedProperties: true
     ignoreErrors:
         - '#Variable static method call on Jose\\Component\\Core\\Util\\Hash\.#'
         - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition::children\(\)#'
-        - '#Parameter \#1 \$value of class FG\\ASN1\\Universal\\Integer constructor expects int\, string given\.#'
         - '#Invalid type object to throw\.#'
         - '#Strict comparison using === between .* and .* will always evaluate to false\.#'
         - '#Binary operation "\^" between string and 1 results in an error\.#'
@@ -19,3 +19,10 @@ parameters:
         - '#Cannot cast mixed to int\.#'
         - '#Parameter .* of (static )?method .* expects Jose\\Component\\Core\\JWK, mixed given\.#'
         - '#Cannot call method (get|has)\(\) on mixed\.#'
+includes:
+    - vendor/phpstan/phpstan/conf/bleedingEdge.neon
+    - vendor/phpstan/phpstan-deprecation-rules/rules.neon
+    - vendor/phpstan/phpstan-phpunit/rules.neon
+    - vendor/phpstan/phpstan-phpunit/extension.neon
+    - vendor/phpstan/phpstan-strict-rules/rules.neon
+    - vendor/ekino/phpstan-banned-code/extension.neon
