--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "ext-sodium": "*",
         "brick/math": "^0.9|^0.10|^0.11",
         "paragonie/constant_time_encoding": "^2.4",
+        "psr/clock": "^1.0",
         "psr/event-dispatcher": "^1.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
