Clock for the bundle

--- a/composer.json
+++ b/composer.json
@@ -146,7 +146,9 @@
         "sort-packages": true,
         "allow-plugins": {
             "infection/extension-installer": true,
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "phpstan/extension-installer": false,
+            "php-http/discovery": false
         }
     }
 }
