--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,7 @@
         "phpstan/phpstan-strict-rules": "^1.4",
         "phpunit/phpunit": "^9.5.23",
         "qossmic/deptrac-shim": "^1.0",
-        "rector/rector": "^0.14",
+        "rector/rector": "^0.16",
         "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "^6.1.3",
         "symfony/finder": "^5.4|^6.0",
@@ -147,7 +147,8 @@
         "allow-plugins": {
             "phpstan/extension-installer": true,
             "infection/extension-installer": true,
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "php-http/discovery": true
         }
     }
 }
