--- a/composer.json
+++ b/composer.json
@@ -76,21 +76,22 @@
         "ext-curl": "*",
         "ext-gmp": "*",
         "bjeavons/zxcvbn-php": "^1.3",
-        "blackfire/php-sdk": "^1.31",
+        "blackfire/php-sdk": "^2.0",
         "ekino/phpstan-banned-code": "^1.0",
-        "infection/infection": "^0.26",
+        "infection/infection": "^0.27",
         "matthiasnoback/symfony-config-test": "^4.3.0",
         "nyholm/psr7": "^1.5",
         "php-http/mock-client": "^1.5",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpbench/phpbench": "^1.2",
+        "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.8",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.4",
         "phpunit/phpunit": "^9.5.23",
         "qossmic/deptrac-shim": "^1.0",
-        "rector/rector": "^0.15",
+        "rector/rector": "^0.16",
         "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "^6.1.3",
         "symfony/finder": "^5.4|^6.0",
@@ -147,8 +148,8 @@
         "allow-plugins": {
             "infection/extension-installer": true,
             "composer/package-versions-deprecated": true,
-            "phpstan/extension-installer": false,
-            "php-http/discovery": false
+            "phpstan/extension-installer": true,
+            "php-http/discovery": true
         }
     }
 }
