--- a/.gitattributes
+++ b/.gitattributes
@@ -15,5 +15,6 @@
 /Makefile export-ignore
 /phpbench.json export-ignore
 /phpstan.neon export-ignore
+/phpstan-baseline.neon export-ignore
 /phpunit.xml.dist export-ignore
 /rector.php export-ignore
