--- a/.github/workflows/release-on-milestone-closed.yml
+++ b/.github/workflows/release-on-milestone-closed.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   release:
-    name: "GIT tag, release & create merge-up PR"
+    name: "Release"
     runs-on: ubuntu-latest
 
     steps:
@@ -27,6 +27,13 @@ jobs:
           "GIT_AUTHOR_NAME": ${{ secrets.GIT_AUTHOR_NAME }}
           "GIT_AUTHOR_EMAIL": ${{ secrets.GIT_AUTHOR_EMAIL }}
 
+  merge-up:
+    name: "Create Merge-Up Pull Request"
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+    needs: "release"
+
+    steps:
       - name: "Create Merge-Up Pull Request"
         uses: "laminas/automatic-releases@1.24.0"
         with:
@@ -38,6 +45,13 @@ jobs:
           "GIT_AUTHOR_NAME": ${{ secrets.GIT_AUTHOR_NAME }}
           "GIT_AUTHOR_EMAIL": ${{ secrets.GIT_AUTHOR_EMAIL }}
 
+  switch:
+    name: "Create and/or Switch to new Release Branch"
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+    needs: "merge-up"
+
+    steps:
       - name: "Create and/or Switch to new Release Branch"
         uses: "laminas/automatic-releases@1.24.0"
         with:
@@ -49,6 +63,13 @@ jobs:
           "GIT_AUTHOR_NAME": ${{ secrets.GIT_AUTHOR_NAME }}
           "GIT_AUTHOR_EMAIL": ${{ secrets.GIT_AUTHOR_EMAIL }}
 
+  bump:
+    name: "Bump Changelog Version On Originating Release Branch"
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+    needs: "switch"
+
+    steps:
       - name: "Bump Changelog Version On Originating Release Branch"
         uses: "laminas/automatic-releases@1.24.0"
         with:
@@ -60,6 +81,13 @@ jobs:
           "GIT_AUTHOR_NAME": ${{ secrets.GIT_AUTHOR_NAME }}
           "GIT_AUTHOR_EMAIL": ${{ secrets.GIT_AUTHOR_EMAIL }}
 
+  milestones:
+    name: "Create new milestones"
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+    needs: "bump"
+
+    steps:
       - name: "Create new milestones"
         uses: "laminas/automatic-releases@1.24.0"
         with:
