Execute split on release type "published"

--- a/.github/workflows/gitsplit.yml
+++ b/.github/workflows/gitsplit.yml
@@ -1,10 +1,10 @@
 name: gitsplit
 on:
   push:
+    branches:
+      - "*.x"
     tags:
       - '*'
-  release:
-    types: [published]
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITSPLIT_TOKEN }}
