Fetch all tags and branches

--- a/.github/workflows/gitsplit.yml
+++ b/.github/workflows/gitsplit.yml
@@ -98,7 +98,9 @@ jobs:
             split_repository: 'signature-pack'
 
     steps:
-      -   uses: actions/checkout@v2
+      -   uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
 
       # no tag
       -
