--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.gitsplit.yml export-ignore
 /monorepo-builder.php export-ignore
 /CODE_OF_CONDUCT.md export-ignore
 /deptrac.yaml export-ignore
