--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -526,6 +526,16 @@ parameters:
             path: src/Bundle/JoseFramework/DependencyInjection/Source/Source.php
 
         -
+            message: "#^Parameter \\#1 \\$json of static method Jose\\\\Component\\\\Core\\\\JWK\\:\\:createFromJson\\(\\) expects string, mixed given\\.$#"
+            count: 1
+            path: src/Bundle/JoseFramework/EnvVarProcessor/KeyEnvVarProcessor.php
+
+        -
+            message: "#^Parameter \\#1 \\$json of static method Jose\\\\Component\\\\Core\\\\JWKSet\\:\\:createFromJson\\(\\) expects string, mixed given\\.$#"
+            count: 1
+            path: src/Bundle/JoseFramework/EnvVarProcessor/KeyEnvVarProcessor.php
+
+        -
             message: "#^Method Jose\\\\Bundle\\\\JoseFramework\\\\Event\\\\ClaimCheckedFailureEvent\\:\\:__construct\\(\\) has parameter \\$claims with no value type specified in iterable type array\\.$#"
             count: 1
             path: src/Bundle/JoseFramework/Event/ClaimCheckedFailureEvent.php
@@ -1176,11 +1186,6 @@ parameters:
             path: src/Component/Core/JWKSet.php
 
         -
-            message: "#^Only numeric types are allowed in \\+, int\\|true given on the right side\\.$#"
-            count: 2
-            path: src/Component/Core/JWKSet.php
-
-        -
             message: "#^Parameter \\#1 \\$values of class Jose\\\\Component\\\\Core\\\\JWK constructor expects array, mixed given\\.$#"
             count: 1
             path: src/Component/Core/JWKSet.php
@@ -1736,6 +1741,11 @@ parameters:
             path: src/Component/KeyManagement/KeyConverter/RSAKey.php
 
         -
+            message: "#^Strict comparison using \\=\\=\\= between Jose\\\\Component\\\\Core\\\\Util\\\\BigInteger and null will always evaluate to false\\.$#"
+            count: 1
+            path: src/Component/KeyManagement/KeyConverter/RSAKey.php
+
+        -
             message: "#^Method Jose\\\\Component\\\\KeyManagement\\\\UrlKeySetFactory\\:\\:getContent\\(\\) has parameter \\$header with no value type specified in iterable type array\\.$#"
             count: 1
             path: src/Component/KeyManagement/UrlKeySetFactory.php
@@ -1916,11 +1926,6 @@ parameters:
             path: src/EncryptionAlgorithm/KeyEncryption/RSA/Util/RSACrypt.php
 
         -
-            message: "#^Variable static method call on Jose\\\\Component\\\\Core\\\\Util\\\\Hash\\.$#"
-            count: 2
-            path: src/EncryptionAlgorithm/KeyEncryption/RSA/Util/RSACrypt.php
-
-        -
             message: "#^Strict comparison using \\=\\=\\= between non\\-empty\\-string and '' will always evaluate to false\\.$#"
             count: 1
             path: src/SignatureAlgorithm/None/None.php
@@ -1928,9 +1933,4 @@ parameters:
         -
             message: "#^Parameter \\#1 \\$length of function random_bytes expects int\\<1, max\\>, int given\\.$#"
             count: 1
-            path: src/SignatureAlgorithm/RSA/Util/RSA.php
-
-        -
-            message: "#^Variable static method call on Jose\\\\Component\\\\Core\\\\Util\\\\Hash\\.$#"
-            count: 2
             path: src/SignatureAlgorithm/RSA/Util/RSA.php
