--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1741,11 +1741,6 @@ parameters:
             path: src/Component/KeyManagement/KeyConverter/RSAKey.php
 
         -
-            message: "#^Strict comparison using \\=\\=\\= between Jose\\\\Component\\\\Core\\\\Util\\\\BigInteger and null will always evaluate to false\\.$#"
-            count: 1
-            path: src/Component/KeyManagement/KeyConverter/RSAKey.php
-
-        -
             message: "#^Method Jose\\\\Component\\\\KeyManagement\\\\UrlKeySetFactory\\:\\:getContent\\(\\) has parameter \\$header with no value type specified in iterable type array\\.$#"
             count: 1
             path: src/Component/KeyManagement/UrlKeySetFactory.php
@@ -1926,6 +1921,11 @@ parameters:
             path: src/EncryptionAlgorithm/KeyEncryption/RSA/Util/RSACrypt.php
 
         -
+            message: "#^Variable static method call on Jose\\\\Component\\\\Core\\\\Util\\\\Hash\\.$#"
+            count: 2
+            path: src/EncryptionAlgorithm/KeyEncryption/RSA/Util/RSACrypt.php
+
+        -
             message: "#^Strict comparison using \\=\\=\\= between non\\-empty\\-string and '' will always evaluate to false\\.$#"
             count: 1
             path: src/SignatureAlgorithm/None/None.php
@@ -1933,4 +1933,9 @@ parameters:
         -
             message: "#^Parameter \\#1 \\$length of function random_bytes expects int\\<1, max\\>, int given\\.$#"
             count: 1
+            path: src/SignatureAlgorithm/RSA/Util/RSA.php
+
+        -
+            message: "#^Variable static method call on Jose\\\\Component\\\\Core\\\\Util\\\\Hash\\.$#"
+            count: 2
             path: src/SignatureAlgorithm/RSA/Util/RSA.php
