--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1176,6 +1176,11 @@ parameters:
             path: src/Component/Core/JWKSet.php
 
         -
+            message: "#^Only numeric types are allowed in \\+, int\\|true given on the right side\\.$#"
+            count: 2
+            path: src/Component/Core/JWKSet.php
+
+        -
             message: "#^Method Jose\\\\Component\\\\Core\\\\JWKSet\\:\\:sortKeys\\(\\) has parameter \\$a with no value type specified in iterable type array\\.$#"
             count: 1
             path: src/Component/Core/JWKSet.php
