--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,7 @@
         </testsuite>
     </testsuites>
     <php>
+        <ini name="display_errors" value="1"/>
         <ini name="error_reporting" value="-1"/>
         <ini name="intl.default_locale" value="en"/>
         <ini name="intl.error_level" value="0"/>
