--- a/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/ECDHES/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-token/jwt-encryption-algorithm-ecdh-es",
+    "name": "[DEPRECATED] web-token/jwt-encryption-algorithm-ecdh-es",
     "description": "ECDH-ES Based Key Encryption Algorithms the JWT Framework.",
     "type": "library",
     "license": "MIT",
