--- a/src/EncryptionAlgorithm/ContentEncryption/AESCBC/composer.json
+++ b/src/EncryptionAlgorithm/ContentEncryption/AESCBC/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-token/jwt-encryption-algorithm-aescbc",
+    "name": "[DEPRECATED] web-token/jwt-encryption-algorithm-aescbc",
     "description": "AES CBC Based Content Encryption Algorithms the JWT Framework.",
     "type": "library",
     "license": "MIT",
