--- a/src/EncryptionAlgorithm/ContentEncryption/AESGCM/composer.json
+++ b/src/EncryptionAlgorithm/ContentEncryption/AESGCM/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-token/jwt-encryption-algorithm-aesgcm",
+    "name": "[DEPRECATED] web-token/jwt-encryption-algorithm-aesgcm",
     "description": "AES GCM Based Content Encryption Algorithms the JWT Framework.",
     "type": "library",
     "license": "MIT",
