--- a/src/EncryptionAlgorithm/KeyEncryption/AESKW/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/AESKW/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-token/jwt-encryption-algorithm-aeskw",
+    "name": "[DEPRECATED] web-token/jwt-encryption-algorithm-aeskw",
     "description": "AES Key Wrapping Based Key Encryption Algorithms the JWT Framework.",
     "type": "library",
     "license": "MIT",
