--- a/src/EncryptionAlgorithm/KeyEncryption/PBES2/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/PBES2/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-token/jwt-encryption-algorithm-pbes2",
+    "name": "[DEPRECATED] web-token/jwt-encryption-algorithm-pbes2",
     "description": "PBES2* Based Key Encryption Algorithms the JWT Framework.",
     "type": "library",
     "license": "MIT",
