--- a/src/EncryptionAlgorithm/KeyEncryption/RSA/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/RSA/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-token/jwt-encryption-algorithm-rsa",
+    "name": "[DEPRECATED] web-token/jwt-encryption-algorithm-rsa",
     "description": "RSA Based Key Encryption Algorithms the JWT Framework.",
     "type": "library",
     "license": "MIT",
