--- a/src/SignatureAlgorithm/RSA/composer.json
+++ b/src/SignatureAlgorithm/RSA/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "web-token/jwt-signature-algorithm-rsa",
-    "description": "RSA Based Signature Algorithms the JWT Framework.",
+    "description": "[DEPRECATED] RSA Based Signature Algorithms the JWT Framework.",
     "type": "library",
     "license": "MIT",
     "keywords": [
