--- a/src/EncryptionAlgorithm/KeyEncryption/PBES2/composer.json
+++ b/src/EncryptionAlgorithm/KeyEncryption/PBES2/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "[DEPRECATED] web-token/jwt-encryption-algorithm-pbes2",
-    "description": "PBES2* Based Key Encryption Algorithms the JWT Framework.",
+    "name": "web-token/jwt-encryption-algorithm-pbes2",
+    "description": "[DEPRECATED] PBES2* Based Key Encryption Algorithms the JWT Framework.",
     "type": "library",
     "license": "MIT",
     "keywords": [
