--- a/.gitsplit.yml
+++ b/.gitsplit.yml
@@ -45,6 +45,8 @@ splits:
     target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-experimental.git"
   - prefix: "src/EncryptionAlgorithm/Experimental"
     target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-experimental.git"
+  - prefix: "src/Experimental"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-experimental.git"
   - prefix: "src/Ecc"
     target: "https://${GH_TOKEN}@github.com/web-token/jwt-util-ecc.git"
   - prefix: "packs/encryption"
