--- a/composer.json
+++ b/composer.json
@@ -121,7 +121,7 @@
         "blackfire/php-sdk": "^2.0",
         "ekino/phpstan-banned-code": "^1.0",
         "infection/infection": "^0.27",
-        "matthiasnoback/symfony-config-test": "^4.3|^5.0",
+        "matthiasnoback/symfony-config-test": "^5.0",
         "nyholm/psr7": "^1.5",
         "php-http/mock-client": "^1.5",
         "php-parallel-lint/php-parallel-lint": "^1.3",
@@ -131,7 +131,7 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.4",
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^10.1",
         "qossmic/deptrac-shim": "^1.0",
         "rector/rector": "^0.18",
         "roave/security-advisories": "dev-latest",
