--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
         "symfony/console": "^5.4|^6.0|^7.0",
         "symfony/dependency-injection": "^5.4|^6.0|^7.0",
         "symfony/event-dispatcher": "^5.4|^6.0|^7.0",
+        "symfony/http-client": "^5.4|^6.0|^7.0",
         "symfony/http-kernel": "^5.4|^6.0|^7.0",
         "symfony/polyfill-mbstring": "^1.12"
     },
@@ -72,7 +73,7 @@
         "ekino/phpstan-banned-code": "^1.0",
         "infection/infection": "^0.27",
         "matthiasnoback/symfony-config-test": "^5.0",
-        "nyholm/psr7": "^1.5",
+        "nyholm/psr7": "^1.8",
         "php-http/mock-client": "^1.5",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpbench/phpbench": "^1.2",
