Fix openssl requirements for existing dependencies

--- a/composer.json
+++ b/composer.json
@@ -51,12 +51,14 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
+        "ext-sodium": "*",
         "brick/math": "^0.9|^0.10|^0.11|^0.12",
         "paragonie/constant_time_encoding": "^2.6",
         "psr/clock": "^1.0",
         "psr/event-dispatcher": "^1.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
+        "spomky-labs/aes-key-wrap": "^7.0",
         "spomky-labs/pki-framework": "^1.0",
         "symfony/config": "^5.4|^6.0|^7.0",
         "symfony/console": "^5.4|^6.0|^7.0",
@@ -86,7 +88,6 @@
         "qossmic/deptrac-shim": "^1.0",
         "rector/rector": "^0.19",
         "roave/security-advisories": "dev-latest",
-        "spomky-labs/aes-key-wrap": "^7.0",
         "symfony/browser-kit": "^6.1|^7.0",
         "symfony/finder": "^6.1|^7.0",
         "symfony/framework-bundle": "^6.1|^7.0",
@@ -128,7 +129,6 @@
         "web-token/jwt-experimental": "self.version"
     },
     "suggest": {
-        "ext-sodium": "Sodium is required for OKP key creation, EdDSA signature algorithm and ECDH-ES key encryption with OKP keys",
         "bjeavons/zxcvbn-php": "Adds key quality check for oct keys.",
         "php-http/httplug": "To enable JKU/X5U support.",
         "php-http/httplug-bundle": "To enable JKU/X5U support.",
