--- a/.github/workflows/release-on-milestone-closed.yml
+++ b/.github/workflows/release-on-milestone-closed.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v4"
+        with:
+          fetch-depth: 0
+        run: git fetch --unshallow
 
       - name: "Release"
         uses: "laminas/automatic-releases@1.24.0"
@@ -36,6 +39,9 @@ jobs:
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v4"
+        with:
+          fetch-depth: 0
+        run: git fetch --unshallow
 
       - name: "Create Merge-Up Pull Request"
         uses: "laminas/automatic-releases@1.24.0"
@@ -57,6 +63,9 @@ jobs:
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v4"
+        with:
+          fetch-depth: 0
+        run: git fetch --unshallow
 
       - name: "Create and/or Switch to new Release Branch"
         uses: "laminas/automatic-releases@1.24.0"
@@ -80,6 +89,7 @@ jobs:
         uses: "actions/checkout@v4"
         with:
           fetch-depth: 0
+        run: git fetch --unshallow
 
       - name: "Bump Changelog Version On Originating Release Branch"
         uses: "laminas/automatic-releases@1.24.0"
@@ -101,6 +111,9 @@ jobs:
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v4"
+        with:
+          fetch-depth: 0
+        run: git fetch --unshallow
 
       - name: "Create new milestones"
         uses: "laminas/automatic-releases@1.24.0"
