Fix EdDSA algorithm

--- a/src/SignatureAlgorithm/EdDSA/composer.json
+++ b/src/SignatureAlgorithm/EdDSA/composer.json
@@ -40,6 +40,7 @@
     "require": {
         "php": ">=8.1",
         "ext-sodium": "*",
+        "paragonie/sodium_compat": "^1.20",
         "web-token/jwt-signature": "^3.2"
     }
 }
