--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "ext-sodium": "*",
         "brick/math": "^0.9|^0.10|^0.11|^0.12",
         "paragonie/constant_time_encoding": "^2.6",
+        "paragonie/sodium_compat": "^1.20",
         "psr/clock": "^1.0",
         "psr/event-dispatcher": "^1.0",
         "psr/http-client": "^1.0",
