--- a/src/Deprecated/EncryptionAlgorithm/Experimental/composer.json
+++ b/src/Deprecated/EncryptionAlgorithm/Experimental/composer.json
@@ -33,6 +33,8 @@
         }
     ],
     "require": {
+        "php": ">=8.1",
+        "ext-openssl": "*",
         "web-token/jwt-experimental": "^3.3"
     }
 }
