--- a/composer.json
+++ b/composer.json
@@ -55,8 +55,6 @@
         "paragonie/sodium_compat": "^1.20",
         "psr/clock": "^1.0",
         "psr/event-dispatcher": "^1.0",
-        "psr/http-client": "^1.0",
-        "psr/http-factory": "^1.0",
         "spomky-labs/pki-framework": "^1.0",
         "symfony/config": "^7.0",
         "symfony/console": "^7.0",
@@ -74,8 +72,7 @@
         "ekino/phpstan-banned-code": "^1.0",
         "infection/infection": "^0.27",
         "matthiasnoback/symfony-config-test": "^5.0",
-        "nyholm/psr7": "^1.8",
-        "php-http/mock-client": "^1.5",
+        "nikic/php-parser": "^4.18",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpbench/phpbench": "^1.2",
         "phpstan/extension-installer": "^1.3",
