--- a/composer.json
+++ b/composer.json
@@ -55,14 +55,13 @@
         "paragonie/sodium_compat": "^1.20",
         "psr/clock": "^1.0",
         "psr/event-dispatcher": "^1.0",
-        "spomky-labs/pki-framework": "^1.0",
+        "spomky-labs/pki-framework": "^1.1",
         "symfony/config": "^7.0",
         "symfony/console": "^7.0",
         "symfony/dependency-injection": "^7.0",
         "symfony/event-dispatcher": "^7.0",
         "symfony/http-client": "^7.0",
-        "symfony/http-kernel": "^7.0",
-        "symfony/polyfill-mbstring": "^1.12"
+        "symfony/http-kernel": "^7.0"
     },
     "require-dev": {
         "ext-curl": "*",
